finished the search functionality, ready to submit

--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -14,7 +14,7 @@
     </tr>
     <tr>
         @{
-            //TODO #2: Complete the View Jobs By Category Table
+            //TODO #2: Complete the View Jobs By Category Table DONE
         }
 
         <td>
